--- a/UN_|_Yes__bank_closing_price_prediction.ipynb
+++ b/UN_|_Yes__bank_closing_price_prediction.ipynb
@@ -107,7 +107,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **GitHub Link -**"
+        "**Github link**"
       ],
       "metadata": {
         "id": "w6K7xa23Elo4"
@@ -116,7 +116,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "https://github.com/uday2510/Yes-_bank_closing_price_prediction/blob/main/UN_%7C_Yes__bank_closing_price_prediction.ipynb"
+        "https://github.com/uday2510/Yes_bank_stock_price_prediction"
       ],
       "metadata": {
         "id": "h1o69JH3Eqqn"
