--- a/UN_|_Yes__bank_closing_price_prediction.ipynb
+++ b/UN_|_Yes__bank_closing_price_prediction.ipynb
@@ -62,9 +62,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Project Type**    - Reg\n",
+        "**Project Type**    - Regression\n",
         "##### **Contribution**    - Individual\n",
-        "##### **Team Member 1 -**  Uday\n"
+        "##### **Team Member 1 -**  Uday Naidu\n"
       ],
       "metadata": {
         "id": "beRrZCGUAJYm"
