--- a/UN_|_Yes__bank_closing_price_prediction.ipynb
+++ b/UN_|_Yes__bank_closing_price_prediction.ipynb
@@ -39,7 +39,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **Project Name**    -\n",
+        "# **Project Name**    - **Yes bank closing price prediction**\n",
         "\n"
       ],
       "metadata": {
